--- a/pinch-zoom.html
+++ b/pinch-zoom.html
@@ -2,7 +2,8 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <!--<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">-->
+  <meta name="viewport" content="initial-scale=1, width=device-width">
   <title>pinch-zoom-demo</title>
 </head>
 <body>
